# csad2526ki405denysiakmykolaandriyovich10

./: CMakeLists.txt  README.md  ci.bat  ci.sh
.github/workflows/: ci.yml
History_ai/: log1.txt  log2.txt  log3.txt  log4.txt  log5.txt  log5_gpt.txt
Lab2/: baud_gen.v  uart_rx.v  uart_tb.out  uart_tb.v  uart_tx.v
tests/: unit_tests.cpp
